--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,9 +9,9 @@
   grid-auto-rows: minmax(200px, auto);
   grid-template-areas: 
   "main aside"
-
   ;
-  grid-gap: 10px;
+  /* row-gap: ; */
+  column-gap: 10px;
 }
 
 
@@ -20,7 +20,12 @@
 .mainNewsCard{
   display: grid;
   grid-area: main;
-  grid-template-columns: 40% 60%
+  grid-template-columns: 35% 65%;
+  /* gap: 10px; */
+  row-gap: 20px;
+margin-bottom: 10px;
+min-height: 300px;
+
 }
 
 .mainNewsCardText p{
@@ -28,7 +33,7 @@
 }
 
 .mainNewsCardText h2{
-  font-size: 17px;
+  font-size: 14px;
   font-weight: bold;
   /* font-smooth: always; */
   -webkit-font-smoothing: antialiased;
@@ -40,9 +45,24 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding-right: 10px;
 }
 
 
 .aside{
   grid-area: aside;
+}
+
+
+.imageWrapper{
+  width: 100%;
+  height: 100%;
+  height: auto;
+  position: relative;
+}
+
+.mainNewsCardText > div{
+  padding: 10px 10px 0 0;
+  border-bottom: 1px #e3e3e3 solid;
+
 }
