--- a/styles/Story.module.css
+++ b/styles/Story.module.css
@@ -3,12 +3,12 @@
     margin: auto;
   }
   
-/* 
+
   .mainImageContainer{
     position: relative;
     width: 100%;
     height: 100%;
-  } */
+  }
 
 
 .newsInfoText{
