+ link to news grid

--- a/styles/Story.module.css
+++ b/styles/Story.module.css
@@ -14,7 +14,7 @@
 .newsInfoText{
   text-align: center;
   font-size: 30px;
-  width: 600px;
+  max-width: 800px;
   margin: auto;
   font-weight: bold;
 }
