--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,39 +7,35 @@
   display: grid;
   grid-template-columns: 70% 30%;
   grid-auto-rows: minmax(200px, auto);
-  grid-template-areas: 
-  "main aside"
-  ;
+  grid-template-areas: "main aside";
   /* row-gap: ; */
   column-gap: 10px;
 }
 
-
-
-
-.mainNewsCard{
+.mainNewsCard {
   display: grid;
   grid-area: main;
   grid-template-columns: 35% 65%;
   /* gap: 10px; */
   row-gap: 20px;
-margin-bottom: 10px;
-min-height: 300px;
-
+  margin-bottom: 10px;
+  min-height: 300px;
+  padding-bottom: 30px;
+  border-bottom: 1px #111 solid;
 }
 
-.mainNewsCardText p{
+.mainNewsCardText p {
   font-size: 13px;
 }
 
-.mainNewsCardText h2{
+.mainNewsCardText h2 {
   font-size: 14px;
   font-weight: bold;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.mainNewsCardText{
+.mainNewsCardText {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,26 +43,27 @@ min-height: 300px;
   padding-right: 10px;
 }
 
-
-.aside{
+.aside {
   grid-area: aside;
 }
 
-
-.imageWrapper{
+.imageWrapper {
   width: 100%;
   height: 100%;
   height: auto;
   position: relative;
 }
 
-.mainNewsCardText > div{
+.mainNewsCardText > div {
   padding: 10px 10px 0 0;
-  border-bottom: 1px #e3e3e3 solid;
-
+  border-bottom: 1px #cbcbcb solid;
 }
 
+.asideSeperator {
+  margin-bottom: 10px;
+}
 
-.asideSeperator{
-  margin-bottom: 10px
+.newsMain {
+  border-right: 1px #cbcbcb solid;
+  padding-right: 10px;
 }
