--- a/styles/Graph.module.css
+++ b/styles/Graph.module.css
@@ -2,3 +2,36 @@
   width: 100%;
   height: 100%;
 }
+
+
+
+.table {
+  width: 100%;
+}
+
+.stockGraph{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+
+.graphItem{
+  display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 20px
+}
+
+.graphText{
+  margin-right: -60px;
+  font-weight: bold;
+  color: darkblue;
+
+}
+.graphNumber{
+  font-size: 12px;
+  color: #959595;
+  font-weight: bold;
+}
