--- a/styles/Graph.module.css
+++ b/styles/Graph.module.css
@@ -13,6 +13,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  cursor: pointer;
+
 }
 
 
@@ -21,7 +23,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 20px
+    margin: 20px;
 }
 
 .graphText{
